name:                pipes-lzma
version:             0.1.0.0
synopsis:            LZMA compressors and decompressors for the pipes package
-- description:         
homepage:            http://github.com/bgamari/pipes-lzma
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Pipes.Lzma
  build-depends:       base >=4.6 && <4.10,
                       bytestring >=0.10 && <0.11,
                       pipes >=4.0 && <4.3,
                       lzma >=0.0.0.1 && <0.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable pipes-lzma-tests
  main-is:             Test.hs
  build-depends:       base >=4.6 && <4.10,
                       bytestring,
                       pipes,
                       pipes-bytestring,
                       pipes-lzma,
                       QuickCheck
  default-language:    Haskell2010

executable pipes-lzma-unxz
  main-is:             Unxz.hs
  build-depends:       base >=4.6 && <4.10,
                       pipes,
                       pipes-bytestring,
                       pipes-lzma
  default-language:    Haskell2010